# CIS194_Homework1

./: CHANGELOG.md  Homework1.cabal  LICENSE  README.md
src/: Homework1.hs
