cabal-version:      2.2
-- The cabal-version field refers to the version of the .cabal specification.

-- The name of the package.
name:               Homework1

-- The package version.
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Working on Homework 1 of CIS 194

-- A longer description of the package.
description:        Learning Haskell by following CIS 194. Starting on Homework 1.

-- The license under which the package is released.
license:            BSD-3-Clause

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Navdeep Natt

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         nattnavdeep41@gmail.com

-- A copyright notice.
-- copyright:

build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md, README.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    -- Import common warning flags.
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:  Homework1

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010

test-suite Homework1-test
    -- Import common warning flags.
    import:           warnings

    -- Base language which the package is written in.
    default-language: Haskell2010

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entry point to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base ^>=4.17.2.1,
        Homework1

